--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-target/*
-.settings/*
-.classpath
-.project
-.factorypath
-.attach_pid*
-.idea
-*.iml
-/target
-.sts4-cache/
-.vscode
-_site/
+*.terraform
+
+# Compiled files
+*.tfstate
+*.tfstate.backup
+*.tfstate.lock.info
+
+# logs
+*.log
+
+# SSH Keys
+*.pem
